--- a/admin.html
+++ b/admin.html
@@ -249,7 +249,7 @@
             <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered ">
               <div class="modal-content">
                 <div class="modal-body d-flex">
-                  <img src="../../assets/images/emir.jpeg" alt="" width="141" height="141" class="rounded-2 object-fit-cover me-4 ">
+                  <img src="/2024-week5/assets/emir-3d7a4b39.jpeg" alt="" width="141" height="141" class="rounded-2 object-fit-cover me-4 ">
                   <div class="view-content w-100 d-flex flex-column justify-content-between">
                     <div class="d-flex justify-content-between">
                       <p>#1</p>
