--- a/admin.html
+++ b/admin.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>index</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0">
-    <script type="module" crossorigin src="/2024-week5/assets/main-315e1a8b.js"></script>
-    <link rel="stylesheet" href="/2024-week5/assets/main-4634c88e.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <script type="module" crossorigin src="/2024-week5/assets/main-bdf7eca0.js"></script>
+    <link rel="stylesheet" href="/2024-week5/assets/main-3901a253.css">
   </head>
   <body>
     <div class="d-flex">
